# cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  util.rs
src/lsp/: lsp.rs
