[package]
name = "whiskey"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whiskey"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whistle_lexer = { git = "https://github.com/whistle-lang/whistle" }
whistle_parser = { git = "https://github.com/whistle-lang/whistle" }
whistle_common = { git = "https://github.com/whistle-lang/whistle" }
whistle_ast = { git = "https://github.com/whistle-lang/whistle" }
whistle_compiler = { git = "https://github.com/whistle-lang/whistle" }
whistle_preprocessor = { git = "https://github.com/whistle-lang/whistle" }
clap = { version = "4.0.29", features = ["derive"] }
wasmprinter = "0.2.45"
wasmer = "3.1.0"
wasmer-wasi = "3.1.0"
wasmer-compiler-cranelift = "3.1.0"
tokio = { version = "1.23.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
futures = "0.3.25"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
